<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_detail"
    android:orientation="vertical" >

    <include
        android:id="@+id/detailTitlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/titlebar_detail" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/detailTitlebar"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="35px"
            android:paddingRight="35px"
            android:paddingTop="20px" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/old_pw_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/old_password" />

                    <EditText
                        android:id="@+id/old_password"
                        android:layout_width="wrap_content"
                        android:layout_height="53px"
                        android:background="@drawable/bg_textbox"
                        android:inputType="textPassword"
                        android:paddingLeft="20px"
                        android:paddingRight="40px"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20px"
                        android:singleLine="true"
                        android:text="@string/new_password" />

                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="wrap_content"
                        android:layout_height="53px"
                        android:background="@drawable/bg_textbox"
                        android:inputType="textPassword"
                        android:paddingLeft="20px"
                        android:paddingRight="40px"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20px"
                        android:singleLine="true"
                        android:text="@string/confirm_password" />

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="wrap_content"
                        android:layout_height="53px"
                        android:background="@drawable/bg_textbox"
                        android:inputType="textPassword"
                        android:paddingLeft="20px"
                        android:paddingRight="40px"
                        android:singleLine="true" />
                </LinearLayout>

                <Button
                    android:id="@+id/modify_password_commit"
                    style="@style/CustomNormalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dip"
                    android:minHeight="42dip"
                    android:minWidth="200dip"
                    android:text="@string/modify_password_commit"
                    android:textSize="@dimen/text_medium_1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>